--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,14 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.3
-	yarn_mappings=1.16.3+build.30
-	loader_version=0.10.1+build.209
-
+# check these on https://fabricmc.net/use
+minecraft_version=1.16.3
+yarn_mappings=1.16.3+build.30
+loader_version=0.10.1+build.209
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = io.coded
-	archives_base_name = minecraft-datadog
-
+mod_version=1.0.0
+maven_group=io.coded
+archives_base_name=minecraft-datadog
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.23.0+build.410-1.16
+# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+fabric_version=0.23.0+build.410-1.16
