--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import net.fabricmc.loom.task.RemapJarTask
 
 plugins {
-	id 'fabric-loom' version '0.5-SNAPSHOT'
+	id 'fabric-loom' version '0.9-SNAPSHOT'
     id 'com.github.johnrengelman.shadow' version '6.1.0'
 	id 'maven-publish'
 }
@@ -11,8 +11,8 @@ configurations {
     compile.extendsFrom shade
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -44,44 +44,37 @@ dependencies {
 processResources {
 	inputs.property "version", project.version
 
-	from(sourceSets.main.resources.srcDirs) {
-		include "fabric.mod.json"
-		expand "version": project.version
-	}
-
-	from(sourceSets.main.resources.srcDirs) {
-		exclude "fabric.mod.json"
-	}
+    filesMatching("fabric.mod.json") {
+        expand "version": project.version
+    }
 }
 
 // ensure that the encoding is set to UTF-8, no matter what the system default is
 // this fixes some edge cases with special characters not displaying correctly
 // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-tasks.withType(JavaCompile) {
-	options.encoding = "UTF-8"
+tasks.withType(JavaCompile).configureEach {
+	it.options.encoding = "UTF-8"
+    it.options.release = 16
 }
 
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
-task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = "sources"
-	from sourceSets.main.allSource
+java {
+    withSourcesJar()
 }
 
 jar {
-	from "LICENSE"
+	from("LICENSE") {
+        rename { "${it}_${project.archives_base_name}" }
+    }
 }
 
 shadowJar {
     configurations = [project.configurations.shade]
-
     mergeServiceFiles()
 }
 
 // This task needs to be used rather than shadowJar or jar, or various problems will happen.
 task remapShadowJar(type: RemapJarTask, dependsOn: tasks.shadowJar) {
-    input = tasks.shadowJar.archivePath
+    input = tasks.shadowJar.archiveFile
     addNestedDependencies = true
 }
 
